--- a/app/views/users/admin_panel.html.erb
+++ b/app/views/users/admin_panel.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <ul class="nav nav-tabs">
     <li class="active nav-item"><a class="active nav-link" data-toggle="tab" href="#users">Users</a></li>
-    <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#images">Images</a></li>
+    <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#images">Projects</a></li>
     <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#algorithms">Algorithms</a></li>
   </ul>
 
@@ -10,7 +10,7 @@
       <%= render 'users_panel' %>
     </div>
     <div id="images" class="tab-pane fade">
-      <%= render 'images_panel' %>
+      <%= render 'projects_panel' %>
     </div>
     <div id="algorithms" class="tab-pane fade">
       <%= render 'algorithms_panel' %>
