--- a/app/views/projects/my_projects.html.erb
+++ b/app/views/projects/my_projects.html.erb
@@ -17,9 +17,9 @@
 			  	<th class="d-none d-md-table-cell"><%= sort_link @q, :id, "ID"%></th>
 			  	<th><%= sort_link @q, :title, "Title"%></th>
 			  	<th><%= sort_link @q, :created_at, "Created"%></th>
-			  	<th><%= sort_link @q, :tissue_type, "Tissue Type"%></th>
+			  	<th><%= sort_link @q, :tissue_type, "Location"%></th>
 			  	<th><%= sort_link @q, :modality, "Modality"%></th>
-			  	<th><%= sort_link @q, :method, "Method"%></th>
+			  	<th><%= sort_link @q, :method, "Dimension"%></th>
 			  	<th>Privacy</th>
 			  	<th></th>
 		  	</tr>
