--- a/app/views/algorithms/_parameter_form.html.erb
+++ b/app/views/algorithms/_parameter_form.html.erb
@@ -1,5 +1,5 @@
 <%= fields_for :parameters, @run.parameters do |parameter_fields| %>
- 	<% @algorithm.parameters.each do |parameter|%> <!-- TODO INTEGRATE ANOTHER ALGORITHM -->
+ 	<% @algorithm.parameters.each do |parameter|%>
  		<% if !parameter["hard_coded"] && !parameter["annotation_derived"] %>
  		<div class="form-group">
  			<%= parameter_fields.label parameter["key"].to_sym, parameter["title"] %>
