--- a/app/views/algorithms/_form.html.erb
+++ b/app/views/algorithms/_form.html.erb
@@ -29,7 +29,7 @@
 
   <div class="field form-group">
     <%= f.label :output_type %><br />
-    <%= f.select('output_type', options_from_collection_for_select(Algorithm::OUTPUT_TYPE_LOOKUP, :last, :first), { :selected => algorithm.output_type }, { class: 'form-control' }) %>
+    <%= f.select('output_type', options_from_collection_for_select(Algorithm::OUTPUT_TYPE_LOOKUP, :last, :first), { :selected => @algorithm.output_type }, { class: 'form-control' }) %>
   </div>
 
   <div class="field form-group">
