--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -7,7 +7,7 @@
 }
 
 .btn-primary{
-  background-color: #0D2776 !important;
+  background-color: #1E419B !important;
   color:white !important;
 }
 
@@ -58,7 +58,7 @@
 #top-nav{
     z-index:6;
     width:100%;
-    background-color: #0D2776 !important;
+    background-color: #1E419B !important;
     flex-direction:row;
 }
 
