--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,12 +1,13 @@
 <div class="container">
 <br/><br/>
 <div style="margin:0px auto; width:75%; text-align:center">
-<img style="width:100%" src="<%=asset_path("public/header.png")%>"/>
 <br/><br/>
 <h1>Welcome to Digital Pathology!</h1>
 </div>
 <br/>
-<b>Digital Pathology is a web application that provides a accessible, user-friendly online workbench for working with, sharing and analyzing pathology imaging data and image analysis algorithms from any web browser. Digital Pathnology is a on-going project in Dr. Jun Kong's lab at the Emory University BMI Department.</b>
+<b><a href="https://slimwiki.com/digital-pathology/">Resources: Wiki and Tutorials</a></b>
+<br/></br>
+<b>Digital Pathology is a web application that provides a accessible, user-friendly online workbench for working with, sharing and analyzing pathology imaging data and image analysis algorithms from any web browser. Digital Pathnology is a on-going project in Dr. Jun Kong's lab at Georgia State University.</b>
 <br/>
 <br/>
 Digital Pathology Goals:
@@ -17,6 +18,6 @@ Digital Pathology Goals:
 	<li>Establish a growing library of public pathology images and algorithms for public use.</li>
 </ul>
 
-For more information on this workbench or if you would like to distribute your algorithms via our platform, please contact <a href="mailto:ays0110@gmail.com">Alice Shen</a> of Dr. Kong's lab.
+For more information on how to use this workbench, please visit our <a href="https://slimwiki.com/digital-pathology/">wiki</a> for more information or if you would like to distribute your algorithms via our platform, please contact <a href="mailto:ays0110@gmail.com">Alice Shen</a> of Dr. Kong's lab.
 
 </div>
