--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 <div style="padding-top:70px;" class="container">
 <h1>Digital Pathology Imageviewer</h1>
 <p>Welcome to Digital Pathology, an online workbench for viewing, sharing and analyzing pathology images.</br>To begin, please <a href="/users/sign_up">create an account</a> or <a href="/images">browse our publicly available pathology images</a>.</p>
-<p>Digital Pathology is built and maintained by Alice Shen and <a href="http://insilico.cci.emory.edu/~jkong/index.html">Dr. Jun Kong's lab</a> of the <a href="http://www.bmi.emory.edu/">Emory University BMI Department (Biomedical Informatics)</a>. <br/>Please direct any comments, questions or inquiries via <a href="mailto:ays0110@gmail.com">email here.</a></p>
+<p>Digital Pathology is built and maintained by Alice Shen and <a href="http://insilico.cci.emory.edu/~jkong/index.html">Dr. Jun Kong's lab</a> at Georgia State University. <br/>Please direct any comments, questions or inquiries via <a href="mailto:ays0110@gmail.com">email here.</a></p>
 <br/><br/>
 
 <div id="example-wide-dzi" class="openseadragon">
