--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
             <a class="nav-link" href="<%=my_projects_path%>">Projects</a>
           </li>
           <li class = "nav-item">
-            <a class="nav-link" href="<%=my_projects_path%>">Analyses</a>
+            <a class="nav-link" href="<%=runs_path%>">Analyses</a>
           </li>
         <% else %>
           <li class = "nav-item">
