--- a/app/views/images/_search_form.html.erb
+++ b/app/views/images/_search_form.html.erb
@@ -35,7 +35,15 @@
 	  	   		type: 'Select',
 	  	   		options: ['2D', '3D'],
 	  	   		editorClass: 'form-control',
-	  	   		editorAttrs: { name: 'q[image_type'}
+	  	   		editorAttrs: { name: 'q[image_type]'}
+	  	   	},
+	  	   	annotation_label:
+	  	   	{
+	  	   		title: 'Has Annotation(s) with Label:',
+	  	   		type: 'Text',
+	  	   		editorClass: 'form-control',
+	  	   		editorAttrs: { name: 'q[annotation_label]s'}
+
 	  	   	}
 	    }
 	});
