--- a/app/views/projects/my_projects.html.erb
+++ b/app/views/projects/my_projects.html.erb
@@ -31,8 +31,12 @@
 			  		<tr>
 			  			<td><%= check_box_tag "project_ids[]", project.id, false, class: 'project-check-box'%></td>
 			  			<td class="d-none d-md-table-cell"><%=project.id%></td>
-			  			<td class="d-none d-md-table-cell"><a href="<%=project_path(project.id)%>"><%=project.title%></a></td>
-			  			<td><%=project.created_at%></td>
+			  			<td class="d-none d-md-table-cell">
+			  				<a href="<%=project_path(project.id)%>"><%=project.title%></a>
+			  				<br/>
+			  				<small><%=project.description%></small>
+			  			</td>
+			  			<td><%=project.created_at.strftime("%m/%d/%Y") %></td>
 			  			<td><%=project.tissue_type%></td>
 			  			<td><%=project.modality%></td>
 			  			<td><%=project.method%></td>
