--- a/app/views/runs/_show_2d.html.erb
+++ b/app/views/runs/_show_2d.html.erb
@@ -60,7 +60,7 @@
 
 		<div class="row">
 			<div class="col-12">
-				<div id="<%=@image.file_file_name.parameterize%>" class="openseadragon">
+				<div id="openseadragon-container" class="openseadragon">
 				</div>
 			</div>
 		</div>
@@ -80,7 +80,7 @@
 	var annotation = '<%=raw(@annotation.data.to_json) %>';
 	var viewer = OpenSeadragon({
 		preserveViewport: true,
-	    id:            "<%=@image.file_file_name.parameterize%>",
+	    id:            "openseadragon-container",
 	    prefixUrl:     "/openseadragon/images/",
 	    tileSources:   "/<%=@image.dzi_url%>",
 	    maxZoomPixelRatio: 5.0
