--- a/app/views/runs/_show_2d.html.erb
+++ b/app/views/runs/_show_2d.html.erb
@@ -58,9 +58,9 @@
 	  		<strong>Too many results (>10,000) to show</strong> <br/>Please zoom in to a smaller section of the image to view results.
     	</div>
 
-		<div class="row">
+		<div style="height:100%" class="row">
 			<div class="col-12">
-				<div id="openseadragon-container" class="openseadragon">
+				<div style="height:100%" id="openseadragon-container" class="openseadragon">
 				</div>
 			</div>
 		</div>
