--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -77,7 +77,7 @@
 		preserveViewport: true,
 	    id:            "openseadragon-container",
 	    prefixUrl:     "/openseadragon/images/",
-	    tileSources:   "/<%=@image_shown.dzi_url%>",
+	    tileSources:   "<%=@image_shown.dzi_url%>",
 	    maxZoomPixelRatio: 2.0
 	});
 
