data directory missing / in prod

--- a/app/views/runs/_show_2d.html.erb
+++ b/app/views/runs/_show_2d.html.erb
@@ -82,7 +82,7 @@
 		preserveViewport: true,
 	    id:            "openseadragon-container",
 	    prefixUrl:     "/openseadragon/images/",
-	    tileSources:   "<%=@image.dzi_url%>",
+	    tileSources:   "/<%=@image.dzi_url%>",
 	    maxZoomPixelRatio: 5.0
 	});
 	var exclude_indices = [];
