--- a/app/views/runs/index.html.erb
+++ b/app/views/runs/index.html.erb
@@ -7,6 +7,7 @@
 	<table class="table table-hover">
 	  <thead>
 	  	<tr>
+			<th class="d-none d-md-table-cell"></th>
 		  	<th class="d-none d-md-table-cell">ID</th>
 		  	<th>Image</th>
 		  	<th class="d-md-none">Run</th>
