--- a/app/views/runs/index.html.erb
+++ b/app/views/runs/index.html.erb
@@ -31,7 +31,7 @@
 	  			<td class="d-none d-md-table-cell"><%=run.algorithm.name%></td>
 	  			<td class="d-none d-md-table-cell"><%=run.annotation.label%></td>
 	  			<td class="d-none d-md-table-cell"><%=Time.at(run.run_at).in_time_zone.to_formatted_s(:db) if run.run_at %></td>
-	  			<td><% if run.complete %>Complete<%elsif run.processing %>Processing (<%=run.tiles_processed%>/<%=run.total_tiles%>)<%else%>In Queue<% end%></td>
+	  			<td><% if run.complete %>Complete<%elsif run.processing && File.exist?(File.join(run.run_folder,'/tiles_to_analyze.json') %>Processing (<%=run.tiles_processed%>/<%=run.total_tiles%>)<%else%>In Queue<% end%></td>
 	  		</tr>
 	  	<% end %>
 	  	<% end %>
