--- a/app/views/runs/_form.html.erb
+++ b/app/views/runs/_form.html.erb
@@ -43,6 +43,8 @@
 		})
 	});
 
+	#$('run_annotation_id').change(function(){})
+
 	$('#run_algorithm_id').change(function(){
 		if($(this).find(":selected").text().includes('3D Algorithm')){
 			$('.twod-algorithm-slice-select').css('display', 'none');
