slider value initialized to 1

--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -118,7 +118,7 @@
 	<br/><br/>
 	<h1>Upload Images</h1>
 	<h4>NDPI, SVS, JPG, TIF, PNG, DICOM File Formats Supported</h4>
-	<h4>Maximum file upload limit: 5</h4>
+	<h4 style="color:red">Maximum file upload limit: 5</h4>
 	<br/><br/>
 	<form action="#" method="GET" class="form image_form">
 		<div class="upload" data-upload-options='{"action":"/images?project_id=<%=@project.id%>"}'></div>
