--- a/app/views/runs/_annotation_form.html.erb
+++ b/app/views/runs/_annotation_form.html.erb
@@ -1,4 +1,15 @@
 <%= form_for(@run) do |f| %>
 	<%= f.label :annotation_id, 'Select Annotation ROI', {class: 'bmd-label-static'} %>
-	<%= f.collection_select :annotation_id, @annotations, :id, :label, {include_blank: 'Whole Slide'}, { class: 'form-control', required: false } %>
+	<%= f.collection_select :annotation_id, @annotations, :id, :label, {include_blank: 'Whole Slide'}, { class: 'form-control', required: false}%>
 <% end %>
+<script>
+	$('#run_annotation_id').change(function(){
+		console.log("here");	
+		$.get('<%=tilesize_form_runs_path%>',{
+                          'id': $(this).val(),
+                          'flag': '1'
+                }).done(function(partial){
+                           $('#tilesize-select').html(partial);
+                });
+	})
+</script>
