--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -20,10 +20,10 @@
 			<% if @image.threed? %>
 				<div class="col-2 slider-container">
 						<button id="slideUp"><i class="material-icons" role="presentation">arrow_drop_up</i></button>
-						<input id="sliceNavigator" class="form-control" type="text" data-slider-min="1" data-slider-max="<%=@slices.length%>" data-slider-step="1" data-slider-value="<%=@slices.length/2%>" data-slider-orientation="vertical"/>	
+						<input id="sliceNavigator" class="form-control" type="text" data-slider-min="1" data-slider-max="<%=@slices.length%>" data-slider-step="1" data-slider-value="<%=(@slices.length.to_f/2).ceil(0)%>" data-slider-orientation="vertical"/>	
 						
 						<button id="slideDown"><i class="material-icons" role="presentation">arrow_drop_down</i></button>
-<span id="sliderValLabel">Current Slide: <span id="sliderVal"><%=@slices.length/2%></span></span>
+<span id="sliderValLabel">Current Slide: <span id="sliderVal"><%=(@slices.length.to_f/2).ceil(0)%></span></span>
 				</div>
 			<% end %>
 		</div>
@@ -80,7 +80,8 @@
 	    id:            "openseadragon-container",
 	    prefixUrl:     "/openseadragon/images/",
 	    tileSources:   "/<%=@image_shown.dzi_url%>",
-	    maxZoomPixelRatio: 2.0
+	    maxZoomPixelRatio: 2.0,
+	    animationTime: 0.0
 	});
 
 	viewer.initializeAnnotations();
