admin notification, image deletion etc

--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -81,6 +81,7 @@
 	    prefixUrl:     "/openseadragon/images/",
 	    tileSources:   "/<%=@image_shown.dzi_url%>",
 	    maxZoomPixelRatio: 2.0,
+	    minPixelRatio: 0.5,
 	    animationTime: 0.0
 	});
 
