deepzoom timeouts fix

--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -82,7 +82,8 @@
 	    tileSources:   "/<%=@image_shown.dzi_url%>",
 	    maxZoomPixelRatio: 2.0,
 	    minPixelRatio: 0.5,
-	    animationTime: 0.0
+	    timeout: 100000,
+	    imageLoaderLimit: 7
 	});
 
 	viewer.initializeAnnotations();
